# rldyour-mimocode

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MEMORY.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/: CLAUDE.md
.gds/: bundle.lock.yaml  compiled-policy.json  repository.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.mimocode/: mimocode.jsonc
.serena/: project.yml
config/: browser-provider-policy.json  mcp-inventory.json  memory-boundary-policy.json  mimocode-baseline.json  projection-policy.json  rldyour-contract.json
docs/: architecture.md  browser-routing.md  cmux-worker.md  mcp-runtime-provenance.md  memory-boundary.md  native-surfaces.md  ry-repair-system-install.md
scripts/: doctor_system_mimocode.sh  install_system_mimocode.sh  mimocode_contract.py  release_sbom.py  validate_fast.sh  validate_mimocode_agents.py  validate_mimocode_browser_provider_policy.py  validate_mimocode_cmux_boundary.py  validate_mimocode_commands.py  validate_mimocode_config.py  validate_mimocode_config_filename_policy.py  validate_mimocode_mcp_inventory.py  validate_mimocode_memory_boundary.py  validate_mimocode_projection_parity.py  validate_mimocode_runtime_baseline.py  validate_mimocode_schema_url.py  validate_mimocode_security_boundary.py  validate_mimocode_skills.py  validate_release_assets.py  validate_release_surfaces.py
tests/: test_mimocode_browser_policy.py  test_mimocode_config.py  test_mimocode_install_plan.py  test_mimocode_memory_boundary.py  test_mimocode_projection.py  test_release_assets.py
(+54 files in other folders)
