[project]
name = "rldyour-mimocode"
version = "1.7.3"
description = "rldyour AI CLI configuration for MiMoCode: native .mimocode config, build/plan/compose agents, persistent memory projection, commands, skills, MCP, browser routing, and runtime validation."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Danil Silantyev", email = "rldyourmnd@users.noreply.github.com" },
]
maintainers = [
  { name = "Danil Silantyev", email = "rldyourmnd@users.noreply.github.com" },
]
keywords = ["mimocode", "mimo-code", "xiaomi", "mcp", "agent-skills", "subagents", "browser-automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/NDDev-it-com/rldyour-mimocode"
Repository = "https://github.com/NDDev-it-com/rldyour-mimocode"
Issues = "https://github.com/NDDev-it-com/rldyour-mimocode/issues"
Changelog = "https://github.com/NDDev-it-com/rldyour-mimocode/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--junitxml=pytest.xml",
]
